--- a/src/styles/technology.sass
+++ b/src/styles/technology.sass
@@ -1,5 +1,9 @@
 span
-  color: #000
-  background: #00a2ff
+  color: #fff
+  background: #aaa
   padding: 5px
   border-radius: 4px
+  display: flex
+  align-items: center
+  gap: .2rem
+  font-weight: 600
