--- a/src/styles/globals.sass
+++ b/src/styles/globals.sass
@@ -7,7 +7,6 @@
 body
   color: rgb(200,200,200)
   background: rgb(10, 10, 10)
-  max-width: 375px
+  max-width: 100%
   margin: 0 auto
   padding: 0 2rem
-  border: 1px solid #fff
