line separator header

--- a/src/styles/footer.sass
+++ b/src/styles/footer.sass
@@ -3,9 +3,6 @@ div
     text-align: center
 
     a
+      color: #00b7ff
       text-decoration: none
-      color: #aaa
       transition: color 500ms ease
-
-      &:hover
-        color: #fff
