--- a/src/styles/header.sass
+++ b/src/styles/header.sass
@@ -1,4 +1,7 @@
 header
+  border-bottom: 0.125rem solid #00b7ff
+  padding-bottom: 4rem
+
   .app-title
     padding: 2rem 0
     display: flex
@@ -14,12 +17,13 @@ header
     img
       width: 7.5rem
       border-radius: 50%
-      border: 0.25rem solid #aaa
+      border: 0.25rem solid #00b7ff
 
     div
       text-align: center
 
       h1
+        color: #00b7ff
         font-size: 1.5rem
         margin-top: 1rem
 
