--- a/src/styles/contact.sass
+++ b/src/styles/contact.sass
@@ -1,6 +1,5 @@
-.section-techs
+.section-contact
   padding-bottom: 2rem
-  border-bottom: .125rem solid #00b7ff
 
   h2
     color: #00b7ff
@@ -9,9 +8,9 @@
     font-size: 16px
     margin-top: 1.5rem
 
-  .tech-group
+  .contact-group
     display: flex
-    flex-wrap: wrap
-    column-gap: .4rem
-    row-gap: .4rem
-    margin-top: 1rem
+    align-items: center
+    justify-content: center
+    gap: 2rem
+    margin-top: 2rem
