--- a/src/styles/header.sass
+++ b/src/styles/header.sass
@@ -22,12 +22,11 @@ header
     div
       text-align: center
 
-      h1
+      .user-name
         color: #00b7ff
         font-size: 1.5rem
         margin-top: 1rem
 
-      p
-        margin-top: .4rem
+      .user-description
         letter-spacing: .3rem
         text-transform: uppercase
