--- a/src/styles/globals.sass
+++ b/src/styles/globals.sass
@@ -7,6 +7,6 @@
 body
   color: rgb(200,200,200)
   background: rgb(10, 10, 10)
-  max-width: 100%
+  max-width: 650px
   margin: 0 auto
   padding: 0 2rem
