--- a/src/styles/footer.sass
+++ b/src/styles/footer.sass
@@ -1,8 +1,10 @@
+@use "variables"
+
 .section-footer
   p
     text-align: center
     padding: 2rem 0
     a
-      color: #00b7ff
+      color: variables.$primary
       text-decoration: none
       transition: color 500ms ease
