--- a/src/styles/globals.sass
+++ b/src/styles/globals.sass
@@ -1,3 +1,5 @@
+@use "variables"
+
 *
   margin: 0
   padding: 0
@@ -5,8 +7,8 @@
   font-family: system-ui, sans-serif
 
 body
-  color: rgb(200,200,200)
-  background: rgb(10, 10, 10)
+  color: variables.$gray
+  background: variables.$dark
   max-width: 650px
   margin: 0 auto
   padding: 0 2rem
