--- a/src/styles/about.sass
+++ b/src/styles/about.sass
@@ -1,12 +1,11 @@
+@use "variables"
+@use "mixins"
+
 .section-about
-  padding: 1.5rem 0
-  border-bottom: 0.125rem solid #00b7ff
+  @include mixins.lineSeparator
 
   h2
-    color: #00b7ff
-    text-align: center
-    text-transform: uppercase
-    font-size: 16px
+    @include mixins.subtitle
 
   p
     color: #ddd
