--- a/src/styles/contact.sass
+++ b/src/styles/contact.sass
@@ -1,16 +1,29 @@
+@use "variables"
+@use "mixins"
+
 .section-contact
   padding-bottom: 2rem
 
   h2
-    color: #00b7ff
-    text-align: center
-    text-transform: uppercase
-    font-size: 16px
-    margin-top: 1.5rem
+    @include mixins.subtitle
 
   .contact-group
-    display: flex
-    align-items: center
-    justify-content: center
+    @include mixins.center
     gap: 2rem
     margin-top: 2rem
+
+    .whatsapp, .github, .instagram, .linkedin
+      color: variables.$gray
+      transition: all 500ms ease
+
+    .whatsapp:hover
+      color: variables.$whatsapp
+
+    .instagram:hover
+      color: variables.$instagram
+
+    .github:hover
+      color: variables.$github
+
+    .linkedin:hover
+      color: variables.$linkedin
