--- a/src/styles/technologies.sass
+++ b/src/styles/technologies.sass
@@ -1,13 +1,11 @@
+@use "variables"
+@use "mixins"
+
 .section-techs
-  padding-bottom: 2rem
-  border-bottom: .125rem solid #00b7ff
+  @include mixins.lineSeparator
 
   h2
-    color: #00b7ff
-    text-align: center
-    text-transform: uppercase
-    font-size: 16px
-    margin-top: 1.5rem
+    @include mixins.subtitle
 
   .tech-group
     display: flex
