--- a/src/styles/contact.sass
+++ b/src/styles/contact.sass
@@ -18,12 +18,16 @@
 
     .whatsapp:hover
       color: variables.$whatsapp
+      transform: scale(1.1)
 
     .instagram:hover
       color: variables.$instagram
+      transform: scale(1.1)
 
     .github:hover
       color: variables.$github
+      transform: scale(1.1)
 
     .linkedin:hover
       color: variables.$linkedin
+      transform: scale(1.1)
