--- a/src/styles/technology.sass
+++ b/src/styles/technology.sass
@@ -7,5 +7,10 @@ span
   padding: 5px
   border-radius: 4px
   @include mixins.itemsCenter
+  @include mixins.textLight
   gap: .2rem
-  font-weight: 600
+  cursor: pointer
+  transition: all 300ms ease
+
+  &:hover
+    transform: scale(1.1)
