--- a/src/styles/about.sass
+++ b/src/styles/about.sass
@@ -17,5 +17,9 @@
     cursor: pointer
     @include mixins.textLight
 
+    @media (max-width: 375px)
+      text-align: left
+      font-size: 0.875rem
+
     &:hover
       color: variables.$light
