--- a/src/styles/header.sass
+++ b/src/styles/header.sass
@@ -63,6 +63,7 @@ header
         @include mixins.textLight
         letter-spacing: .3rem
         text-transform: uppercase
+        margin-top: .2rem
 
   @keyframes rotate
     from
