--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@500&family=Space+Grotesk:wght@500&family=Ubuntu:wght@400;500;700&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -10,10 +12,43 @@
 
 body {
     background-color: rgb(14, 12, 12);
+    font-family: 'Ubuntu', sans-serif;
 }
 
 .container {
-    width: 700px;
+    width: 580px;
     max-width: 90%;
     margin: 0 auto;
+}
+
+.avatar {
+    animation: 1.5s fromTop forwards;
+}
+
+.contacts {
+    animation: 1.5s fromBottom forwards;
+}
+
+@keyframes fromTop {
+    from {
+        opacity: 0;
+        transform: translateY(-30px);
+    }
+
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+@keyframes fromBottom {
+    from {
+        opacity: 0;
+        transform: translateY(30px);
+    }
+
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
