--- a/src/index.css
+++ b/src/index.css
@@ -11,11 +11,13 @@
 }
 
 body {
-    background-color: rgb(14, 12, 12);
+    background: linear-gradient(to bottom, black, rgb(0, 3, 39));
     font-family: 'Nunito', sans-serif;
+    height: 100%;
 }
 
 .container {
+    min-height: 100%;
     width: 580px;
     max-width: 90%;
     margin: 0 auto;
