--- a/src/index.css
+++ b/src/index.css
@@ -54,3 +54,17 @@ body {
         transform: translateY(0);
     }
 }
+
+body::-webkit-scrollbar {
+    width: 3px;
+    height: 3px;
+}
+
+body::-webkit-scrollbar-track {
+    background: transparent;
+    padding: 2px;
+}
+
+body::-webkit-scrollbar-thumb {
+    background-color: #07b6d5;
+}
